--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
   </section>
   <nav id="desktop-nav" class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="https://astalift.com.sg/"><img class="logo" src="./images/Astalift logo.png" alt=""></a>
+      <a class="navbar-brand" href="https://astalift.com.sg/"><img class="logo" src="./images/Astalift logo.png"
+          alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -102,14 +103,16 @@
     <div class="container-fluid">
       <div class="d-inline">
         <i id="slider-open" class="fas fa-bars"></i>
-        <a class="navbar-brand" href="https://astalift.com.sg/" target="_blank"><img class="logo" src="./images/Astalift logo.png" alt=""></a>
+        <a class="navbar-brand" href="https://astalift.com.sg/" target="_blank"><img class="logo"
+            src="./images/Astalift logo.png" alt=""></a>
 
       </div>
 
       <div class="slider ">
         <div class="slider-header  d-flex align-items-center">
           <i id="slider-close" class="fas fa-times"></i>
-          <a class="navbar-brand" href="https://astalift.com.sg/" target="_blank"><img class="slider-logo" src="./images/Astalift logo.png" alt="" ></a>
+          <a class="navbar-brand" href="https://astalift.com.sg/" target="_blank"><img class="slider-logo"
+              src="./images/Astalift logo.png" alt=""></a>
         </div>
         <ul class="slider-ul">
           <li class="nav-item">
@@ -155,8 +158,8 @@
           <h1 class="bodoni">Rediscover Your Skin’s Intrinsic Beauty</h1>
           <h3 class="mulish bold">White Jelly Aquarysta – an evolution from the iconic Aquarysta line.</h3>
           <br>
-          <p class="mulish">Packed with even more exclusive pioneering skin rejuvenating technology and ingredients that
-            boost your skin’s radiance & suppleness for a youthful, healthy look.</p>
+          <p class="mulish">Packed with even more exclusive pioneering skin-rejuvenating technology and ingredients that
+            boost your skin’s radiance & suppleness for a youthful, healthy look. </p>
         </div>
       </div>
       <div style="background-color: #fff;" class="">
@@ -176,7 +179,8 @@
           <p class="">Natural-origin antioxidant that tightens skin and builds ceramides from within.</p>
           <br>
           <h1 class="sec-moile-second-title">Nano AMA+</h1>
-          <p class="">Breaks down melanin production to prevent hyperpigmentation & age spots, inhibits collagen discolouration
+          <p class="">Breaks down melanin production to prevent hyperpigmentation & age spots, inhibits collagen
+            discolouration
             to prevent dulling of skin.</p>
 
         </div>
@@ -377,7 +381,7 @@
           </div>
         </div>
       </div>
-  
+
     </section>
     <section id="sec-3">
       <div class="">
@@ -451,7 +455,8 @@
           <div class="step-4">
             <h3 class="steps-title">Step 4 </h3>
             <p class="steps-des">Follow through with serum and cream for best results.</p>
-            <a href="https://astalift.com.sg/product/white-jelly-aquarysta-40g-60g-refill/" target="_blank" class="btn how-2-use-btn"> SHOP NOW</a>
+            <a href="https://astalift.com.sg/product/white-jelly-aquarysta-40g-60g-refill/" target="_blank"
+              class="btn how-2-use-btn"> SHOP NOW</a>
           </div>
         </div>
 
@@ -476,11 +481,13 @@
             <img class="how-2-use-image" src="./images/mobile/15_Step02.png" alt="">
             <div class="step-1-mobile  d-flex flex-column align-items-center">
               <h4 class="step-text-1 ">Step 2</h4>
-              <div class="vpop d-flex flex-column align-items-center" data-type="youtube" data-id="hXeJjhAQh50" data-autoplay='true'>
-                <p class="how-2-use-mobile-d step2-p">Press Jelly firmly into skin to ensure absorption. <a href="" class="mobile-htu-link">Click
-                  here to learn more.</a> </p>
+              <div class="vpop d-flex flex-column align-items-center" data-type="youtube" data-id="hXeJjhAQh50"
+                data-autoplay='true'>
+                <p class="how-2-use-mobile-d step2-p">Press Jelly firmly into skin to ensure absorption. <a href=""
+                    class="mobile-htu-link">Click
+                    here to learn more.</a> </p>
               </div>
-         
+
             </div>
           </div>
 
@@ -496,7 +503,8 @@
             <div class="step-4-mobile d-flex flex-column align-items-center">
               <h4 class="step-text-1">Step 4</h4>
               <p class="how-2-use-mobile-d">Follow through with serum and cream for best results.</p>
-              <a href="https://astalift.com.sg/product/white-jelly-aquarysta-40g-60g-refill/" target="_blank" class="btn how-2-use-btn"> SHOP NOW</a>
+              <a href="https://astalift.com.sg/product/white-jelly-aquarysta-40g-60g-refill/" target="_blank"
+                class="btn how-2-use-btn"> SHOP NOW</a>
             </div>
           </div>
         </div>
@@ -766,7 +774,8 @@
             <h4 class="u-may-text-1">Astalift White Shield Drink <br><span style="opacity: 0;">AM</span></h4>
             <h5 class="u-may-text-2">50ml x 10 btls</h5>
             <h6 class="u-may-text-3">$50.00</h6>
-            <a href="https://astalift.com.sg/product/new-astalift-white-shield-drink-50ml-x-10-btls/" class="btn buy-now-btn " target="_blank">BUY NOW</a>
+            <a href="https://astalift.com.sg/product/new-astalift-white-shield-drink-50ml-x-10-btls/"
+              class="btn buy-now-btn " target="_blank">BUY NOW</a>
           </div>
         </div>
         <div class="swiper-slide col-md-4 text-center d-flex flex-column">
@@ -775,7 +784,8 @@
             <h4 class="u-may-text-1 text-center">D-UV Clear White Solution <br> SPF50+ PA++++</h4>
             <h5 class="u-may-text-2">30g</h5>
             <h6 class="u-may-text-3">$72.00</h6>
-            <a href="https://astalift.com.sg/product/astalift-d-uv-clear-white-solution/" class="btn buy-now-btn" target="_blank">BUY NOW</a>
+            <a href="https://astalift.com.sg/product/astalift-d-uv-clear-white-solution/" class="btn buy-now-btn"
+              target="_blank">BUY NOW</a>
           </div>
         </div>
         <div class="swiper-slide col-md-4 text-center d-flex flex-column align-items-center">
@@ -785,7 +795,8 @@
             </h4>
             <h5 class="u-may-text-2">40g | 60g | Refill</h5>
             <h6 class="u-may-text-3">$141.00 – $222.00</h6>
-            <a href="https://astalift.com.sg/product/renewal-jelly-aquarysta-t/" class="btn buy-now-btn " target="_blank">BUY NOW</a>
+            <a href="https://astalift.com.sg/product/renewal-jelly-aquarysta-t/" class="btn buy-now-btn "
+              target="_blank">BUY NOW</a>
           </div>
         </div>
         <div class="swiper-slide col-md-4 text-center d-flex flex-column">
@@ -794,7 +805,8 @@
             <h4 class="u-may-text-1">White Essence Infilt <br><span style="opacity: 0;">AM</span></h4>
             <h5 class="u-may-text-2">30ml | 30ml Refill</h5>
             <h6 class="u-may-text-3">$108.00 – $115.00</h6>
-            <a href="https://astalift.com.sg/product/astalift-white-essence-infilt-h/" class="btn buy-now-btn " target="_blank">BUY NOW</a>
+            <a href="https://astalift.com.sg/product/astalift-white-essence-infilt-h/" class="btn buy-now-btn "
+              target="_blank">BUY NOW</a>
           </div>
         </div>
       </div>
@@ -813,10 +825,10 @@
         <i class="fas fa-plus"></i>
       </div>
       <div class="faq-answer-container">
-        <p class="faq-answer">White Jelly functions as a skin moisture booster and conditioner that helps to strengthen
-          your skin’s natural defense against environmental factors such as pollution, dryness and UV exposure. It works
-          by repairing skin’s outer layer protection and promoting bright and even skin tone while enhancing its
-          capacity to absorb and retain moisture.</p>
+        <p class="faq-answer">White jelly functions as a skin moisture booster and conditioner that helps to strengthen
+          your skin’s natural defence against environmental factors such as pollution, dryness, and UV exposure. It
+          works by repairing the skin’s outer layer protection, promotes brightness, and evens the skin tone while
+          enhancing its capacity to absorb and retain moisture. </p>
       </div>
 
     </div>
@@ -826,9 +838,9 @@
         <i class="fas fa-plus"></i>
       </div>
       <div class="faq-answer-container">
-        <p class="faq-answer">White Jelly is recommended for daily use on pat-dried skin immediately after cleansing
-          before application of lotion in the morning and at night. Use the spatula provided to take an appropriate
-          amount of product for your face and neck area. Spread product evenly on skin using fingers then gently press
+        <p class="faq-answer">White Jelly is recommended for daily use on pat-dried skin immediately after cleansing,
+          before application of lotion in the morning, and at night. Use the spatula provided to take an appropriate
+          amount of product for your face and neck area. Spread product evenly on skin using fingers, then gently press
           in using palms to allow the nano-sized active ingredients to be absorbed optimally.</p>
       </div>
 
@@ -855,7 +867,7 @@
       </div>
       <div class="faq-answer-container">
         <p class="faq-answer">The reddish-tone characteristic found in Astalift skincare is derived from its key active
-          ingredient, Astaxanthin which is a marine botanical extract of micro-algae. Studies have shown that
+          ingredient, Astaxanthin, which is a marine botanical extract of micro-algae. Studies have shown that
           Astaxanthin, which is naturally-coloured red, provides remarkable anti-oxidation protection and anti-aging
           properties for the skin.
         </p>
@@ -869,10 +881,10 @@
       </div>
       <div class="faq-answer-container">
         <p class="faq-answer">No, White Jelly Aquarysta is formulated with Fujifilm’s proprietary Nano AMA+ that works
-          effectively to restore skin’s natural translucence and brilliance. Unlike typical acids or skin lightening
-          agents that typically feels stimulating for the skin, White Jelly is suitable for daily use on all skin types
-          and gentle even on sensitive skin as it contains only carefully selected botanical-based extracts to achieve
-          spot lightening and brightening effects. </p>
+          effectively to restore the skin’s natural translucence and brilliance. Unlike typical acids or skin lightening
+          agents that typically feel stimulating for the skin, White Jelly Aquarysta is suitable for daily use on all
+          skin types, and is gentle even on sensitive skin as it contains only carefully selected botanical-based
+          extracts to achieve spot-lightening and brightening effects. </p>
       </div>
 
     </div>
