--- a/index.html
+++ b/index.html
@@ -938,7 +938,7 @@
                     <input type="email" placeholder="Your Email" value="" name="EMAIL"
                       class="required email form-control bg-transparent  newsletter" id="mce-EMAIL">
 
-                    <input style="width: 56px;" type="submit" value="Go" name="subscribe" placeholder="Your Email"
+                    <input type="submit" value="Go" name="subscribe" placeholder="Your Email"
                       id="mc-embedded-subscribe" class="button subBtn btn btn-white bg-white border-0">
                   </div>
                   <div id="mce-responses" class="clear">
