--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@700;800&display=swap" rel="stylesheet">
 
   <title>white jelly</title>
 
@@ -793,7 +793,7 @@
           <div class="products-description">
             <h4 class="u-may-text-1 renwal-product">Jelly Aquarysta <br><span style="opacity: 0;">AM</span>
             </h4>
-            <h5 class="u-may-text-2">40g | 60g | Refill</h5>
+            <h5 class="u-may-text-2">40g | 60g | (Refill)</h5>
             <h6 class="u-may-text-3">$141.00 – $222.00</h6>
             <a href="https://astalift.com.sg/product/renewal-jelly-aquarysta-t/" class="btn buy-now-btn "
               target="_blank">BUY NOW</a>
