--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
           <img class="other-product" src="./images/youMayAlso/White Essence Infilt H.png" alt="">
           <div class="products-description">
             <h4 class="u-may-text-1">White Essence Infilt <br><span style="opacity: 0;">AM</span></h4>
-            <h5 class="u-may-text-2">30ml | 30ml Refill</h5>
+            <h5 class="u-may-text-2">30ml | 30ml (Refill)</h5>
             <h6 class="u-may-text-3">$108.00 – $115.00</h6>
             <a href="https://astalift.com.sg/product/astalift-white-essence-infilt-h/" class="btn buy-now-btn "
               target="_blank">BUY NOW</a>
