--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             <h5 class="hero-subtitle">White Jelly Aquarysta – an evolution from the iconic Aquarysta line.</h5>
             <br>
             <p class="dis-1">
-              Packed with even more exclusive pioneering skin rejuvenating technology and ingredients that boost your
+              Packed with even more exclusive pioneering skin-rejuvenating technology and ingredients that boost your
               skin’s radiance & suppleness for a youthful, healthy look.
             </p>
           </div>
@@ -370,7 +370,7 @@
             </div>
             <div class="second-message">
               <h1 class="skin-title">Double Human-Type Nano-Ceramides</h1>
-              <p class="skin-subtitle">Smallest ceramide molecules that penetrate deep into skin to replenish
+              <p class="skin-subtitle">Smallest ceramide molecules that penetrate deep into the skin to replenish
                 ceramides and lock moisture.</p>
             </div>
 
