--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.0/slick/slick-theme.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
-  <link rel="stylesheet" href="css/style.css?v=2.0">
+  <link rel="stylesheet" href="css/style.css?v=2.1">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -793,7 +793,7 @@
           <div class="products-description">
             <h4 class="u-may-text-1 renwal-product">Jelly Aquarysta <br><span style="opacity: 0;">AM</span>
             </h4>
-            <h5 class="u-may-text-2">40g | 60g | (Refill)</h5>
+            <h5 class="u-may-text-2">40g | 60g | Refill</h5>
             <h6 class="u-may-text-3">$141.00 – $222.00</h6>
             <a href="https://astalift.com.sg/product/renewal-jelly-aquarysta-t/" class="btn buy-now-btn "
               target="_blank">BUY NOW</a>
@@ -1110,7 +1110,7 @@
 
 
 
-  <script src="js/main.js?v=2.0"></script>
+  <script src="js/main.js?v=2.1"></script>
 
   <script>
     $(".vpop").on('click', function (e) {
