--- a/index.html
+++ b/index.html
@@ -712,9 +712,11 @@
       </div>
     </div>
     <div class="container-fluid">
-      <h1 class="text-start they-using-it-title">What People Are Saying
+      <h1 class="text-start they-using-it-title">Find Out What He Say
+
       </h1>
-      <h1 class="text-center they-using-it-title-mobile">What People Are Saying
+      <h1 class="text-center they-using-it-title-mobile">Find Out What He Say
+
       </h1>
       <!-- Swiper -->
       <!-- <div class="section d-flex flex-column align-items-center">
@@ -771,7 +773,7 @@
           <img class="other-product" src="./images/youMayAlso/Astalift Drink Whiteshield.png" alt="">
 
           <div class="products-description">
-            <h4 class="u-may-text-1">Astalift White Shield Drink <br><span style="opacity: 0;">AM</span></h4>
+            <h4 class="u-may-text-1"> White Shield Drink <br><span style="opacity: 0;">AM</span></h4>
             <h5 class="u-may-text-2">50ml x 10 btls</h5>
             <h6 class="u-may-text-3">$50.00</h6>
             <a href="https://astalift.com.sg/product/new-astalift-white-shield-drink-50ml-x-10-btls/"
@@ -803,7 +805,7 @@
           <img class="other-product" src="./images/youMayAlso/White Essence Infilt H.png" alt="">
           <div class="products-description">
             <h4 class="u-may-text-1">White Essence Infilt <br><span style="opacity: 0;">AM</span></h4>
-            <h5 class="u-may-text-2">30ml | 30ml (Refill)</h5>
+            <h5 class="u-may-text-2">30ml | Refill</h5>
             <h6 class="u-may-text-3">$108.00 – $115.00</h6>
             <a href="https://astalift.com.sg/product/astalift-white-essence-infilt-h/" class="btn buy-now-btn "
               target="_blank">BUY NOW</a>
@@ -825,7 +827,7 @@
         <i class="fas fa-plus"></i>
       </div>
       <div class="faq-answer-container">
-        <p class="faq-answer">White jelly functions as a skin moisture booster and conditioner that helps to strengthen
+        <p class="faq-answer">White Jelly functions as a skin moisture booster and conditioner that helps to strengthen
           your skin’s natural defence against environmental factors such as pollution, dryness, and UV exposure. It
           works by repairing the skin’s outer layer protection, promotes brightness, and evens the skin tone while
           enhancing its capacity to absorb and retain moisture. </p>
