--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
+  
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+ 
+  <meta name="description" content="THE ULTIMATE SKIN BRIGHTENING BOOSTER">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://astalift.com.sg/event/White-Jelly/">
+  <meta property="og:title" content="THE ULTIMATE SKIN BRIGHTENING BOOSTER">
+  <meta property="og:description" content="THE ULTIMATE SKIN BRIGHTENING BOOSTER">
+  <meta property="og:image" content="https://i.ibb.co/bmFdSP6/wj.png" />
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://astalift.com.sg/event/White-Jelly/">
+  <meta property="twitter:title" content="THE ULTIMATE SKIN BRIGHTENING BOOSTER">
+  <meta property="twitter:description" content="THE ULTIMATE SKIN BRIGHTENING BOOSTER">
+  <meta property="twitter:image" content="https://i.ibb.co/bmFdSP6/wj.png">
+  
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -14,14 +30,14 @@
     href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.0/slick/slick-theme.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
-  <link rel="stylesheet" href="css/style.css?v=2.1">
+  <link rel="stylesheet" href="css/style.css?v=2.9">
   <link rel="stylesheet" href="css/slick.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@700;800&display=swap" rel="stylesheet">
 
-  <title>white jelly</title>
+  <title>Astalift White Jelly Aquarysta</title>
 
   <!-- <script type="text/javascript">
 
@@ -72,7 +88,7 @@
   </section>
   <nav id="desktop-nav" class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="https://astalift.com.sg/"><img class="logo" src="./images/Astalift logo.png"
+      <a class="navbar-brand" href="https://astalift.com.sg/" target="_blank"><img class="logo" src="images/Astalift Logo.png"
           alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -102,10 +118,13 @@
   </nav>
   <nav id="mobile-nav" class="navbar">
     <div class="container-fluid">
-      <div class="d-inline">
+      <div class="w-100">
         <i id="slider-open" class="fas fa-bars"></i>
-        <a class="navbar-brand" href="https://astalift.com.sg/" target="_blank"><img class="logo"
-            src="./images/Astalift logo.png" alt=""></a>
+        <div class="d-flex align-items-center justify-content-center">
+           <a class="navbar-brand " href="https://astalift.com.sg/" target="_blank"><img class="logo"
+            src="images/Astalift Logo.png" alt=""></a>
+        </div>
+       
 
       </div>
 
@@ -113,26 +132,41 @@
         <div class="slider-header  d-flex align-items-center">
           <i id="slider-close" class="fas fa-times"></i>
           <a class="navbar-brand" href="https://astalift.com.sg/" target="_blank"><img class="slider-logo"
-              src="./images/Astalift logo.png" alt=""></a>
+              src="images/Astalift Logo.png" alt=""></a>
         </div>
         <ul class="slider-ul">
           <li class="nav-item">
             <a class="slider-link " onclick="closeSlider()" aria-current="page" href="#hearo">White Jelly Aquarysta</a>
+            <div class="devier   justify-content-center align-items-center">
+              <div class="inner"></div>
+            </div>
           </li>
           <li class="nav-item">
             <a class="slider-link" onclick="closeSlider()" href="#sec-3">Benefits </a>
+            <div class="devier   justify-content-center align-items-center">
+              <div class="inner"></div>
+            </div>
           </li>
 
           <li class="nav-item">
             <a class="slider-link" onclick="closeSlider()" href="#how-2-use-mobile">Application</a>
+            <div class="devier   justify-content-center align-items-center">
+              <div class="inner"></div>
+            </div>
           </li>
           <li class="nav-item">
             <a class="slider-link" onclick="closeSlider()" href="#faq-section">FAQs </a>
+            <div class="devier   justify-content-center align-items-center">
+              <div class="inner"></div>
+            </div>
           </li>
           <li class="nav-item">
             <a class="slider-link " onclick="closeSlider()"
               href="https://astalift.com.sg/product/white-jelly-aquarysta-40g-60g-refill/" tabindex="-1"
               target="_blank">SHOP NOW </a>
+              <div class="devier   justify-content-center align-items-center">
+                <div class="inner"></div>
+              </div>
           </li>
         </ul>
       </div>
@@ -200,14 +234,14 @@
       <div style="background-color: #fff;" class="d-flex flex-column justify-content-center align-items-center">
         <div class="p-5 ">
           <h1 class="bodoni bold">Delivering Results Through Our Proprietary Formula</h1>
-          <p class="mulish">Nano-sized particles that melt right into your skin for deeper absorption.</p>
+          <p class="mulish">Nano-sized particles that melt right into your skin for deeper absorption</p>
         </div>
         <img width="80%" src="./images/mobile/10_Skin_Cells.gif" alt="">
         <div class="container-fluid">
           <div class="row mt-5 p-5">
             <div class="col-6">
               <h1 class="sec-2-mobile-title mulish bold">Nano-Astanxanthin <br><span style="opacity: 0;">AMO</span></h1>
-              <p class="nano-as-subtitle-mobile">Super-antioxidant from microalgae with 6000 times more potency than
+              <p class="nano-as-subtitle-mobile">Super-antioxidant from microalgae with 6000 times more potency than <br>
                 Vitamin C.</p>
             </div>
             <div class="col-6">
@@ -346,8 +380,8 @@
         </div>
         <div class="delivering-result-container">
           <h1 class="delivering-result-title">Delivering Results Through Our Proprietary Formula</h1>
-          <p class="delivering-result-subtitle">Nano-sized particles that melt right into your skin for deeper
-            absorption.</p>
+          <p class="delivering-result-subtitle">Nano-sized particles that melt right into <br> your skin for deeper
+            absorption</p>
         </div>
       </div>
       <div class="container skin-cells-container ">
@@ -463,7 +497,7 @@
 
       </div>
     </section>
-    <section id="how-2-use-mobile">
+    <section id="how-2-use-mobile" style="    margin-right: -9px;">
       <div id="h2u-mobile" class="swiper-container mobile-how-to-use-slider row">
         <h1 class="how-2-use-mobile-title">How To Use</h1>
  
@@ -712,10 +746,10 @@
       </div>
     </div>
     <div class="container-fluid">
-      <h1 class="text-start they-using-it-title">Find Out What He Say
+      <h1 class="text-start they-using-it-title">Find Out What He Says
 
       </h1>
-      <h1 class="text-center they-using-it-title-mobile">Find Out What He Say
+      <h1 class="text-center they-using-it-title-mobile">Find Out What He Says
 
       </h1>
       <!-- Swiper -->
@@ -813,8 +847,12 @@
         </div>
       </div>
       <!-- Add Arrows -->
-      <img class="mobile-arrows-right " src="./images/mobile/32_Arrow_Next.png" alt="">
-      <img class="mobile-arrows-left " src="./images/mobile/31_Arrow_Previous.png" alt="">
+    <div style="position: relative;">
+          <img class="new-arrow-swiper-2-right" src="./images/mobile/32_Arrow_Next.png" alt="">
+      <img class="new-arrow-swiper-2-left" src="./images/mobile/31_Arrow_Previous.png" alt="">
+    </div>
+  
+     
     </div>
   </section>
   </div>
@@ -957,7 +995,7 @@
             <h4 class="Subscribe-and-follow text-uppercase mt-4">Subscribe & Follow</h4>
             <div id="footer-social" class="d-flex d-inline">
               <a class=" banner-social-button" href="https://www.facebook.com/AstaliftSingapore" target="_blank">
-                <i class="fab fa-facebook-f"></i></a>
+                <i class="fab fa-facebook"></i></a>
               <a class=" banner-social-button" href="https://www.instagram.com/astaliftsg" target="_blank">
                 <i class="fab fa-instagram"></i>
                 <a class="banner-social-button" href="https://www.youtube.com/channel/UC6WwJOo0m530yFIK3Zevq0A"
@@ -969,7 +1007,7 @@
           </div>
         </div>
       </div>
-      <p class="text-center mt-3 mb-0">© FUJIFILM Corporation</p>
+      <p class="text-center mt-3 mb-0 fujifilm">© FUJIFILM Corporation</p>
     </div>
     <!-- -------------------------------------mobile footer--------------------- -->
     <div class="mobile-footer">
@@ -1082,15 +1120,15 @@
 
       </div>
       <div id="footer-social" class="d-flex d-inline justify-content-center">
-        <a style="background-color: #464646;" class="sbha-button banner-social-button"
+        <a   class="sbha-button banner-social-button"
           href="https://www.facebook.com/AstaliftSingapore" target="_blank">
-          <i style="color: #fff; font-size:40 ;" class="fab fa-facebook-f"></i></a>
-        <a style="background-color: #464646;" class="sbha-button banner-social-button"
+          <i  class="fab fa-facebook"></i></a>
+        <a   class="sbha-button banner-social-button"
           href="https://www.instagram.com/astaliftsg" target="_blank">
-          <i style="color: #fff; font-size:40 ;" class="fab fa-instagram"></i>
-          <a style="background-color: #464646;  ;" class="sbha-button banner-social-button"
+          <i style="color: #464646; font-size:40 ;" class="fab fa-instagram"></i>
+          <a   class="sbha-button banner-social-button"
             href="https://www.youtube.com/channel/UC6WwJOo0m530yFIK3Zevq0A" target="_blank">
-            <i style="color: #fff; font-size:40 ;" class="fab fa-youtube"></i></a>
+            <i style="color: #464646; font-size:40 ;" class="fab fa-youtube"></i></a>
       </div>
     </div>
   </footer>
@@ -1112,7 +1150,7 @@
 
 
 
-  <script src="js/main.js?v=2.1"></script>
+  <script src="js/main.js?v=2.6"></script>
   <script src="js/slick.js"></script>
 
   <script>
