--- a/index.html
+++ b/index.html
@@ -1154,7 +1154,7 @@
   <script src="js/slick.js"></script>
 
   <script>
-    $(".vpop").on('click', function (e) {
+    $(".vpop").on('load', function (e) {
       e.preventDefault();
       $("#video-popup-overlay,#video-popup-iframe-container,#video-popup-container,#video-popup-close").show();
 
